--- a/introducao-javascript-inicial/introducao-javascript/index.html
+++ b/introducao-javascript-inicial/introducao-javascript/index.html
@@ -6,10 +6,12 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
-
+		<script>
+			// alert("Olá Mundo");
+			console.log("Oi mundo");
+		</script>
 	</head>
 	<body>
-
 		<header>
 			<div class="container">
 				<h1>Aparecida Nutrição</h1>
