--- a/introducao-javascript-inicial/introducao-javascript/index.html
+++ b/introducao-javascript-inicial/introducao-javascript/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -71,13 +71,6 @@
 
 			</section>
 		</main>
-		<script>
-			// alert("Olá Mundo");
-			// console.log("Oi mundo");
-			var titulo = document.querySelector("h1");
-			console.log(titulo); // Por que está mostrando o resultado da linha 80 que teoricamente ainda não foi processada?
-			console.log(titulo.textContent);
-			titulo.textContent = "Aparecida Nutricionista";
-		</script>
+		<script src="js/principal.js"></script>
 	</body>
 </html>
