--- a/introducao-javascript-inicial/introducao-javascript/index.html
+++ b/introducao-javascript-inicial/introducao-javascript/index.html
@@ -61,7 +61,7 @@
 						</tr>
 						<tr class="paciente" >
 							<td class="info-nome">Tatiana</td>
-							<td class="info-peso">4600</td>
+							<td class="info-peso">48</td>
 							<td class="info-altura">1.55</td>
 							<td class="info-gordura">19</td>
 							<td class="info-imc">0</td>
@@ -73,7 +73,7 @@
 		</main>
 		<section class="container">
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
-			<form>
+			<form id="form-adiciona">
 				<div class="grupo">
 					<label for="nome">Nome:</label>
 					<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
