--- a/introducao-javascript-inicial/introducao-javascript/index.html
+++ b/introducao-javascript-inicial/introducao-javascript/index.html
@@ -98,5 +98,6 @@
 		</section>
 		<script src="js/calcula-imc.js"></script>
 		<script src="js/form.js"></script>
+		<script src="js/TestesJavaScript.js"></script>
 	</body>
 </html>
