--- a/introducao-javascript-inicial/introducao-javascript/index.html
+++ b/introducao-javascript-inicial/introducao-javascript/index.html
@@ -70,7 +70,8 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
+				
 			</section>
 		</main>
 		<section class="container">
@@ -103,5 +104,6 @@
 		<script src="js/TestesJavaScript.js"></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/filtra.js"></script>
+		<script src="js/buscar-paciente.js"></script>
 	</body>
 </html>
